--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </head>
 
     <body>
-        <img src="images/g.jpg" alt="sunset" />
-        <h1>Ntsikei's Challenge for Tuesday, December 6th 2022</h1>
-        <p id="unique-p">Learn about the basics of web development - specifically dive into HTML & CSS.</p>
-        <p>Explore the <a href="full-week.html">full week</a> </p>
-
+        <main>
+            <img src="images/g.jpg" alt="sunset" />
+            <h1>Ntsikei's Challenge for <span>Tuesday, December 6th 2022</span></h1>
+            <p id="unique-p">Learn about the basics of web development - specifically dive into HTML & CSS.</p>
+        </main>
+        <footer>
+            <p>Explore the <a href="full-week.html">full week</a> </p>
+        </footer>
     </body>
 
 
