--- a/full-week.html
+++ b/full-week.html
@@ -10,7 +10,7 @@
         <link href="styles/full-week.css" rel="stylesheet"/>
         <meta name="description" content="This is a page where we learn html and css using 100 days of code course"/>
         <meta name="author" content="Ntsikelelo Sonjica"/>
-        <link href="images/g.jpg" rel="icon">
+        <link href="images/favicon.ico" rel="icon" type="image/x-icon">
     </head>
     <body>
         <header>
