travel project files

--- a/travel project/index.html
+++ b/travel project/index.html
@@ -18,7 +18,12 @@
 
         </div>
     
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="/travel project/places.html">Destinations</a></li>
+                <li><a href="/travel project/about.html">About</a></li>
+            </ul>
+        </nav>
 
     </header>
 
