added images and styles for travel project

--- a/travel project/index.html
+++ b/travel project/index.html
@@ -28,11 +28,14 @@
     </header>
 
     <main>
-        <section>
+        <section id="hero">
+            <h1>Ntsikelelo's Travel Page</h1>
+            <p>Let's explore the world together!</p>
+            <a href="/travel project/places.html">Discover places</a>
 
         </section>
 
-        <section>
+        <section id="highlights">
 
         </section>
     </main>
