improved the travel project

--- a/travel project/index.html
+++ b/travel project/index.html
@@ -29,18 +29,49 @@
 
     <main>
         <section id="hero">
-            <h1>Ntsikelelo's Travel Page</h1>
-            <p>Let's explore the world together!</p>
-            <a href="/travel project/places.html">Discover places</a>
+            <div id="hero-content">
+                <h1>Ntsikei's Travel Page</h1>
+                <p>Let's explore the world together!</p>
+                <a href="/travel project/places.html">Discover places</a>
+
+            </div>
 
         </section>
 
         <section id="highlights">
+            <h2>Highlights</h2>
+            <ul id="destination">
+                <li class="destination">
+                    <img src="/travel project/images/places/c.jpg" alt="waterfront">
+                    <p>Waterfront <br><strong>Cape Town</strong> </p>
+                </li>
+                <li class="destination">
+                    <img src="/travel project/images/places/d.jpg" alt="a">
+                    <p>Mall of Africa <br><strong>Johhanesburg</strong> </p>
+                </li>
+                <li class="destination">
+                    <img src="/travel project/images/places/e.jpg" alt="b">
+                    <p>Ushaka Marine World <br><strong>Durban</strong> </p>
+                </li>
+                <li class="destination">
+                    <img src="/travel project/images/places/j.jpg" alt="b">
+                    <p>Tsitsikama Bungey Jumping<br><strong>Eastern Cape</strong> </p>
+                </li>
+
+            </ul>
 
         </section>
     </main>
 
     <footer>
+        <ul>
+            <li>
+                <a href="https://instagram.com/ntiskelel0"><img src="/travel project/images/icons/insta.png" alt="Instagram logo"></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/ntiske1el0"><img src="/travel project/images/icons/twitter.png" alt="Twitter logo"></a>
+            </li>
+        </ul>
 
     </footer>
     
