updated files for different projects

--- a/project1/assessment1.html
+++ b/project1/assessment1.html
@@ -63,9 +63,12 @@
 
     </main>
     <footer>
-        <p><a class="afooter" href="pdfs/html-cheatsheet.pdf" target="_blank">Download PDF Summary</a></p>
+        <div id="divanchors">
+            <p><a class="afooter" href="pdfs/html-cheatsheet.pdf" target="_blank">Download HTML cheatsheet</a></p>
+            <p><a class="afooter" href="pdfs/css-cheatsheet.pdf" target="_blank">Download CSS cheatsheet</a></p>
+        </div>
         <p class="pfooter">(c) Ntsikelelo Sonjica (Pty) Ltd.</p>
-
+        
     </footer>
 
 </body>
