--- a/travel project/index.html
+++ b/travel project/index.html
@@ -42,7 +42,7 @@
             <h2>Highlights</h2>
             <ul id="destination">
                 <li class="destination">
-                    <img src="/travel project/images/places/c.jpg" alt="waterfront">
+                    <img src="/travel project/images/places/waterfront.jpg" alt="waterfront">
                     <p>Waterfront <br><strong>Cape Town</strong> </p>
                 </li>
                 <li class="destination">
@@ -66,10 +66,10 @@
     <footer>
         <ul>
             <li>
-                <a href="https://instagram.com/ntiskelel0"><img src="/travel project/images/icons/insta.png" alt="Instagram logo"></a>
+                <a href="https://instagram.com/ntiskelel0"><img src="/travel project/images/icons/insta1.jpeg" alt="Instagram logo"></a>
             </li>
             <li>
-                <a href="https://twitter.com/ntiske1el0"><img src="/travel project/images/icons/twitter.png" alt="Twitter logo"></a>
+                <a href="https://twitter.com/ntiske1el0"><img src="/travel project/images/icons/twitter.jpeg" alt="Twitter logo"></a>
             </li>
         </ul>
 
