updated social nedia links and icons

--- a/travel project/index.html
+++ b/travel project/index.html
@@ -66,10 +66,10 @@
     <footer>
         <ul>
             <li>
-                <a href="https://instagram.com/ntiskelel0"><img src="/travel project/images/icons/insta1.jpeg" alt="Instagram logo"></a>
+                <a href="https://instagram.com/ntsikelel0"><img src="/travel project/images/icons/insta9.webp" alt="Instagram logo"></a>
             </li>
             <li>
-                <a href="https://twitter.com/ntiske1el0"><img src="/travel project/images/icons/twitter.jpeg" alt="Twitter logo"></a>
+                <a href="https://twitter.com/ntsikele1o"><img src="/travel project/images/icons/twitter8.jpeg" alt="Twitter logo"></a>
             </li>
         </ul>
 
