improved the travel project and added about template

--- a/travel project/index.html
+++ b/travel project/index.html
@@ -10,6 +10,7 @@
     <title>Travel Goals</title>
     <link rel="stylesheet" href="/travel project/styles/shared.css">
     <link rel="stylesheet" href="/travel project/styles/styles.css">
+    <link rel="icon" href="/travel project/images/icons/sunset.ico">
 </head>
 <body>
     <header>
@@ -42,19 +43,19 @@
             <h2>Highlights</h2>
             <ul id="destination">
                 <li class="destination">
-                    <img src="/travel project/images/places/waterfront.jpg" alt="waterfront">
-                    <p>Waterfront <br><strong>Cape Town</strong> </p>
+                    <img src="/travel project/images/places/waterfront.jpg" alt="Waterfront">
+                    <p>Waterfront <br><strong>Western Cape</strong> </p>
                 </li>
                 <li class="destination">
-                    <img src="/travel project/images/places/d.jpg" alt="a">
-                    <p>Mall of Africa <br><strong>Johhanesburg</strong> </p>
+                    <img src="/travel project/images/places/kruger-national-park1.jpeg" alt="Kruger National Park">
+                    <p>Kruger National Park <br><strong>Limpopo</strong> </p>
                 </li>
                 <li class="destination">
-                    <img src="/travel project/images/places/e.jpg" alt="b">
-                    <p>Ushaka Marine World <br><strong>Durban</strong> </p>
+                    <img src="/travel project/images/places/Oudthsoorn4.jpeg" alt="">
+                    <p>Oudthsoorn <br><strong>Western Cape</strong> </p>
                 </li>
                 <li class="destination">
-                    <img src="/travel project/images/places/j.jpg" alt="b">
+                    <img src="/travel project/images/places/tsitsikama.jpeg" alt="Tsitsikama">
                     <p>Tsitsikama Bungey Jumping<br><strong>Eastern Cape</strong> </p>
                 </li>
 
@@ -70,6 +71,9 @@
             </li>
             <li>
                 <a href="https://twitter.com/ntsikele1o"><img src="/travel project/images/icons/twitter8.jpeg" alt="Twitter logo"></a>
+            </li>
+            <li>
+                <a href="https://telegram.me/maz_3a"><img src="/travel project/images/icons/telegram1.jpeg" alt="Telegram logo"></a>
             </li>
         </ul>
 
