--- a/travel project/places.html
+++ b/travel project/places.html
@@ -10,6 +10,7 @@
     <title>Travel Goals</title>
     <link rel="stylesheet" href="/travel project/styles/shared.css">
     <link rel="stylesheet" href="/travel project/styles/places.css">
+    <link rel="icon" href="/travel project/images/icons/sunset.ico">
 </head>
 <body>
     <header>
@@ -51,6 +52,9 @@
             </li>
             <li>
                 <a href="https://twitter.com/ntsikele1o"><img src="/travel project/images/icons/twitter8.jpeg" alt="Twitter logo"></a>
+            </li>
+            <li>
+                <a href="https://telegram.me/maz_3a"><img src="/travel project/images/icons/telegram1.jpeg" alt="Telegram logo"></a>
             </li>
         </ul>
 
